--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
             <p>This email was sent automatically, please do not reply to this email.</p>
             <p class="yayasan">Yayasan Plan International Indonesia</p>
             <p>
-                <img src="logo/lokasi.png">
+                <img src="https://plandonasipoc.azureedge.net/public/files%2Flokasi-49b15557fbc3f6c7eadc9.png">
                 <strong>National Office (NO) DKI Jakarta</strong><br>
                 <div class="alamat-footer">
                     Komplek Buncit Utama Kav.16 Jl.Warung Jati Barat, Kec. Pasar Minggu, Jakarta Selatan<br>12540
                 </div>
             </p>
             <p>
-                <img src="logo/telephone.png">
+                <img src="https://plandonasipoc.azureedge.net/public/files%2Ftelephone-6749b15557fbc3f6c7ead.png">
                 <strong>Hotline: 0807-1-717-717</strong>
             </p>
             <p>
-                <img src="logo/email.png">
+                <img src="https://plandonasipoc.azureedge.net/public/files%2FVector-06749b15557fbc3f6c7ea.png">
                 <strong>yayasan.pii@plan-international.org</strong>
             </p>
         </div>
